fix: add z-index of modal in css file

--- a/src/UI/Modal/MarkdownModal.css
+++ b/src/UI/Modal/MarkdownModal.css
@@ -14,6 +14,7 @@
   opacity: 0;
   transition: all 0.3s ease-in-out;
   pointer-events: none;
+  z-index: 30;
 }
 
 .modal.show {
